# paDC

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  b  padc-gpu  pyproject.toml
daemon/: __init__.py  audio.py  config.py  main.py  new_daemon.py  new_daemon_vad.py  padc_daemon.py  whisper.py
padc/: __init__.py  audio.py  cli.py
padc/adapters/: __init__.py  base.py  faster_whisper.py  faster_whisper_gpu.py  openai.py
scripts/: install.sh  padc  padc-cancel  padc-claude-send  padc-claude-send-fr  padc-start  padc-status  padc-stop  padc-toggle  padc-toggle-insert  padc-toggle-insert-continue  padc-toggle-insert-enter  padc-toggle-paste  padcd
