[project]
name = "padc"
version = "0.1.0"
description = "Speech-to-text CLI tool with local and cloud transcription"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "numpy>=2.3.2",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.1",
    "sounddevice>=0.5.2",
    "torch>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemon"]
